<resources>
    <string name="app_name">Chess porject</string>
    <string name="scan_game">Сканировать доску</string>
    <string name="prev_game">Посмотреть партии</string>
    <string name="scan">Сделать фотографию</string>
    <string name="game1">Игра 1</string>
    <string name="game2">Игра 2</string>
    <string name="game3">Игра 3</string>
    <string name="game4">Игра 4</string>
    <string name="game5">Игра 5</string>
    <string name="start">Поехали</string>
    <string name="start_game">Начало партии</string>
    <string name="game_2"></string>
    <string name="reg_in">Зарегистрироваться</string>
    <string name="log_in">Войти</string>
    <string name="email">email</string>
    <string name="password">password</string>
</resources>